# LearnCaption

./: .gitignore  package-lock.json  package.json
chrome-extension/: background.js  content-meet.js  content-youtube.js  manifest.json
docs/superpowers/plans/: 2026-04-20-learncaption-foundation.md  2026-04-20-learncaption-plan-b.md  2026-04-21-learncaption-plan-c.md  2026-04-23-hud-ui-redesign.md
docs/superpowers/specs/: 2026-04-20-learncaption-design.md  (+4 more)
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: audio-capture-aarch64-apple-darwin  whisper-worker-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/sidecars/audio-capture/: Package.swift
src-tauri/sidecars/audio-capture/Sources/AudioCapture/: main.swift
src-tauri/src/: http_server.rs  lib.rs  main.rs  translation.rs
src-tauri/src/caption_source/: mod.rs  ws_server.rs
src-tauri/src/commands/: capture.rs  mod.rs  pipeline.rs  review.rs  settings.rs  translate.rs  tts.rs  vocabulary.rs
src-tauri/src/db/: app_db.rs  mod.rs  schema.rs
src-tauri/src/dictionary/: ecdict.rs  mod.rs
src-tauri/src/pipeline/: annotator.rs  audio_sidecar.rs  mod.rs  model_download.rs  stt.rs
src-tauri/whisper-worker/: Cargo.toml
src-tauri/whisper-worker/src/: main.rs
src/components/: ReviewPage.tsx  ScrollColumn.tsx  Sidebar.tsx  SourceBadge.tsx  SubtitleWindow.tsx  Token.tsx  TopBar.tsx  VocabBook.tsx  VocabCalibration.tsx  WordDetail.tsx  WordPopover.tsx
src/contexts/: DisplaySettings.tsx
src/types/: subtitle.ts  vocabulary.ts
